[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/fonts/airstrike/airstrike3d.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background/star_bg/bg_01.png" type="Texture" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/highland-gothic/HighlandGothicFLF-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/small_print/Small Print.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://shaders/scrollBg.tres" type="Material" id=6]
[ext_resource path="res://assets/Audio/background_music/Juhani Junkala [Chiptune Adventures] 1. Stage 1.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TitleLbl:custom_fonts/font")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleLbl:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "title_blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TitleLbl:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00330865, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=6]
resource_name = "Collect"
tracks/0/type = "value"
tracks/0/path = NodePath("GameMenu/Collect:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameMenu/Trivia:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameMenu/Collect:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "trivia"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GameMenu/Trivia:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Bg" type="TextureRect" parent="."]
material = ExtResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 1024.0
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/title_blink = SubResource( 3 )

[node name="TitleLbl" type="Label" parent="."]
anchor_right = 1.0
margin_right = 640.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "DARK MATTER"
align = 1
valign = 1

[node name="WelcomeLbl" type="Label" parent="."]
margin_left = 12.0
margin_top = 73.0
margin_right = 52.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 4 )

[node name="WelcomeCountdown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GameMenu" type="Node2D" parent="."]
visible = false

[node name="Arrow1" type="Label" parent="GameMenu"]
margin_left = 138.0
margin_top = 179.0
margin_right = 178.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 5 )
text = "->"

[node name="Trivia" type="Label" parent="GameMenu"]
margin_left = 178.0
margin_top = 179.0
margin_right = 508.0
margin_bottom = 207.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Test Your Knowledge"

[node name="Collect" type="Label" parent="GameMenu"]
margin_left = 178.0
margin_top = 225.0
margin_right = 544.0
margin_bottom = 253.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Go On Space Adventure"

[node name="Arrow2" type="Label" parent="GameMenu"]
margin_left = 138.0
margin_top = 225.0
margin_right = 178.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 5 )
text = "->"

[node name="GameMenuAnimation" type="AnimationPlayer" parent="."]
anims/Collect = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/trivia = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="timeout" from="WelcomeCountdown" to="." method="_on_WelcomeCountdown_timeout"]
